# dhara

./: .coverage  .gitignore  ACKS.txt  AGENTS.md  AUDIT_FIXES_COMPLETE.md  CHANGELOG.md  CLAUDE.md  DEPLOYMENT.md  DHARA_MODES_QUICK_REFERENCE.md  DHRUVA_MODES_QUICK_REFERENCE.md  DHRUVA_OPERATIONAL_MODES_IMPLEMENTATION.md  DHRUVA_OPERATIONAL_MODES_PLAN.md  DHRUVA_TEST_COVERAGE_PLAN.md  DRUVA_MODES_QUICK_REFERENCE.md  DRUVA_OPERATIONAL_MODES_IMPLEMENTATION.md  DURUS_MODERNIZATION_ARCHITECTURE_REVIEW.md  INSTALL.txt  MCP_HOOKS_SETUP_COMPLETE.md  PHASE3_IMPLEMENTATION_COMPLETE.md  PHASE4_SUMMARY.md  README.md  TEST_AUTOMATION_COMPLETE.md  TEST_COVERAGE_EXPANSION_SUMMARY.md  TEST_QUICK_REFERENCE.md  coverage.json  project.toml  pyproject.toml  setup_backup_system.py  start_mcp.sh
.benchmarks/Darwin-CPython-3.13-64bit/: 0001_9ef30c2dbfa092aeb49b8765eb34ad9ad2b239a5_20260208_073629_uncommited-changes.json
.claude/checkpoints/: checkpoint-20260210-012946.json
benchmarks/: README.md  __init__.py  conftest.py  test_cache.py  test_fallback_performance.py  test_operations.py  test_serializers.py
deployment/config/: production.yaml
deployment/kubernetes/: deployment.yaml  service.yaml
deployment/scripts/: deploy.sh  generate_token.py  healthcheck.sh
dhara/: __init__.py  __main__.py  __main__.py.backup.json  _compat.py  btree.py  btree.py.backup  btree.py.backup.json  cli.py  connection.py  connection.py.backup  connection.py.backup.json  error.py  file.py  file_storage.py  file_storage.py.backup  file_storage.py.backup.json  file_storage2.py  file_storage2.py.backup.json  persistent.py  persistent.py.backup  persistent.py.backup.json  persistent_dict.py  persistent_dict.py.backup  persistent_dict.py.backup.json  persistent_list.py  persistent_list.py.backup  persistent_list.py.backup.json  persistent_set.py  persistent_set.py.backup  persistent_set.py.backup.json  serialize_legacy.py  shelf.py  storage_server.py  storage_server.py.backup  storage_server.py.backup.json
dhara.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
dhara/backup/: __init__.py  catalog.py  cli.py  manager.py  restore.py  scheduler.py  storage.py
dhara/collections/: __init__.py  btree.py  btree.py.backup  btree.py.backup.json  dict.py  list.py  set.py
dhara/config/: __init__.py  defaults.py  loader.py  loader.py.backup  loader.py.backup.json  security.py  security.py.backup.json  security.py.bak
dhara/core/: __init__.py  config.py  connection.py  persistent.py
dhara/mcp/: QUICKSTART.md  README.md  __init__.py  __main__.py  adapter_tools.py  auth.py  ecosystem_state.py  fastmcp_auth.py  kv_timeseries.py  middleware.py  oneiric_server.py  profiles.py  server.py  server_core.py  server_core.py.backup  server_core.py.backup.json
dhara/modes/: __init__.py  base.py  lite.py  standard.py
dhara/monitoring/: __init__.py  health.py  metrics.py  server.py
dhara/security/: __init__.py  oneiric_secrets.py  signing.py  tls.py
dhara/serialize/: __init__.py  adapter.py  dill.py  factory.py  fallback.py  msgspec.py  pickle.py
dhara/server/: __init__.py  server.py  server.py.backup  server.py.backup.json
dhara/shell/: __init__.py  session_tracker.py
dhara/storage/: __init__.py  base.py  client.py  file.py  sqlite.py  (+2 more)
dhruva/: __init__.py  __main__.py  _compat.py  btree.py  cli.py  connection.py  error.py  file.py  file_storage.py  file_storage2.py  logger.py  persistent.py  persistent_dict.py  persistent_list.py  persistent_set.py  serialize_legacy.py  shelf.py  storage_server.py  utils.py
dhruva.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
doc/: CHANGES_CNRI.txt  FAQ.txt  LICENSE_CNRI.txt  README_CNRI.txt
docs/: BACKUP_POLICY.md  BACKUP_RECOVERY.md  FINAL_TEST_COVERAGE_REPORT.md  LEGACY_COMPATIBILITY_AND_REMOVAL_PLAN.md  MIGRATION_GUIDE.md  README.md  SECRET_MANAGEMENT.md  serialization-implementation.md  serializer-quick-reference.md  test_coverage_improvement.md  test_coverage_progress_summary.md
druva/: __init__.py  __main__.py  _compat.py  btree.py  cli.py  connection.py  error.py  file_storage.py  file_storage2.py  persistent.py  persistent_dict.py  persistent_list.py  persistent_set.py  serialize_legacy.py  shelf.py  storage_server.py
druva.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
examples/: backup_example.py  security_example.py
runbooks/: DISASTER_RECOVERY.md
scripts/: dev-start.sh  run_coverage_audit.sh
settings/: dhara.yaml  dhruva.yaml  druva.yaml  lite.yaml  standard.yaml
test/: conftest.py  stress.py  test_btree.py  test_btree_comprehensive.py  test_btree_len.py  test_client_storage.py  test_config.py  test_connection.py  test_fallback_integration.py  test_fallback_serializer.py  test_file.py  test_file_storage.py  test_logging.py  test_mcp_auth.py  test_missing.py  test_persistent.py.bak  test_persistent_dict.py  test_persistent_list.py  test_persistent_set.py  test_pypy_compat.py  test_security.py  test_serialize.py  test_serializers.py  test_shelf.py  test_signing.py  test_storage.py  test_storage_server.py  test_tls.py  test_utils.py
tests/: conftest.py  coverage_summary.md  test_auth.py  test_backup_catalog.py  test_backup_manager.py  test_backup_manager_simple.py  test_backup_restore.py  test_backup_scheduler.py  test_backup_scheduler_simple.py  test_backup_simple.py  test_backup_storage.py  test_backup_storage_oneiric.py  test_backup_verification.py  test_base_mode.py  test_base_mode_simple.py  test_btree.py  test_cli.py  test_collections.py  test_collections_btree.py  test_collections_dict.py  test_collections_set.py  test_collections_simple.py  test_compat.py  test_config_defaults.py  test_config_loader.py  test_config_security.py  test_config_security_extended.py  test_connection.py  test_core_config.py  test_core_config_extra.py  test_core_connection2.py  test_core_connection_methods.py  test_core_persistent.py  test_core_simple.py  test_ecosystem_state.py  test_file_storage2.py  test_health_monitor.py  test_kv_timeseries.py  test_lite_mode.py  test_lite_mode_simple.py  (+45 more)
(+212 files in other folders)
