[build-system]
requires = ["setuptools", "wheel"]

[dependency-groups]
dev = [
    "crackerjack",
    "onnxruntime>=1.20.0",
]

[tool.uv]
override-dependencies = [
    # Skip onnxruntime on macOS (no universal wheels available)
    "onnxruntime>=1.20.0; sys_platform == 'linux'",
]

# Full-Featured Library Template
# For: Libraries, frameworks, shared packages (oneiric, mcp-common, acb, fastblocks)
# Features: Comprehensive testing, quality tools, type checking fallback

[project]
name = "druva"
version = "0.6.1"
description = "A Python Object Database"
readme = "README.md"
requires-python = ">=3.13"
license = {text = "MIT"}
authors = [
    {name = "CNRI and others", email = "nas-druva@arctrix.com"},
]
maintainers = [
    {name = "druva Development Team", email = "nas-druva@arctrix.com"},
]
keywords = ["database", "persistence", "object-database", "storage", "nosql"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    # MCP server framework (ecosystem standard)
    "fastmcp>=2.14.0",
    "mcp-common>=0.7.0",
    # Configuration and logging (ecosystem standard)
    "oneiric>=0.5.0",
    # ASGI server for FastMCP
    "uvicorn>=0.30.0",
    # Admin shell with IPython (ecosystem standard)
    "ipython>=8.0.0",
    "rich>=13.0.0",  # For pretty tables and console output
    "msgspec>=0.20.0",
]

[project.urls]
Homepage = "https://github.com/lesleslie/druva"
Documentation = "https://github.com/lesleslie/druva#readme"
Repository = "https://github.com/lesleslie/druva"
"Source Code" = "https://github.com/lesleslie/druva"
"Bug Tracker" = "https://github.com/lesleslie/druva/issues"

[project.scripts]
druva = "druva.__main__:main"
druva-mcp = "druva.cli:main"

[tool.setuptools]
packages = ["druva"]

[tool.ruff]
target-version = "py313"
line-length = 88
exclude = ["tests/", "test_*.py", "*_test.py"]

[tool.ruff.lint]
extend-select = ["C901", "F", "I", "UP"]
ignore = ["E402", "F821"]
fixable = ["ALL"]

[tool.ruff.lint.mccabe]
max-complexity = 15

[tool.pytest.ini_options]
asyncio_mode = "auto"
timeout = 600
testpaths = ["test"]
addopts = [
    "--cov=druva",
    "--cov-report=term-missing:skip-covered",
    "--cov-report=html:htmlcov",
    "--cov-report=json",
    "--strict-markers",
    "--strict-config",
    "-ra",
    "--tb=short",
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "e2e: End-to-end tests",
    "security: Security-focused tests",
    "performance: Performance and load tests",
    "slow: Slow tests (>2s)",
    "benchmark: Benchmark tests (deferred)",
    "smoke: Quick smoke tests",
    "regression: Regression tests",
    "api: API endpoint tests",
]

[tool.coverage.run]
branch = true
parallel = true  # CRITICAL for pytest-xdist
concurrency = ["multiprocessing"]
source = ["druva"]
data_file = ".coverage"
omit = [
    "*/test/*",
    "*/__pycache__/*",
    "*/__init__.py",
    "*/_version.py",
    "*/conftest.py",
]

[tool.coverage.report]
exclude_also = [
    "pragma: no cover",
    "def __repr__",
    "def __str__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "@abstractmethod",
    "pass",
    "raise ImportError",
    "except ImportError",
]

[tool.pyright]
include = ["druva"]
exclude = [
    "test/*",
    "scratch",
    ".venv",
    "build",
    "dist",
]
typeCheckingMode = "strict"
pythonVersion = "3.13"

[tool.bandit]
target = ["druva"]
skips = ["B101", "B110", "B112", "B404", "B603", "B607"]
exclude_dirs = ["test/"]

[tool.codespell]
quiet-level = 3
ignore-words-list = "crate,uptodate,nd,nin"

[tool.creosote]
paths = ["druva"]
deps-file = "pyproject.toml"
exclude-deps = [
    "hatchling",
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "pytest-mock",
    "pytest-xdist",
    "pytest-timeout",
    "pytest-benchmark",
    "ruff",
    "pyright",
    "bandit",
    "creosote",
    "codespell",
    "refurb",
    "complexipy",
]

[tool.refurb]
enable_all = false
quiet = true
python_version = "3.13"

[tool.complexipy]
default_pattern = "**/*.py"
exclude_patterns = [
    "**/test/**",
    "**/test_*.py",
]
max_complexity = 15
