[build-system]
requires = ["setuptools", "wheel"]

[dependency-groups]
dev = [
    "azure-storage-blob>=12.23.0",
    "boto3>=1.35.0",
    "crackerjack",
    "dill>=0.3.9",
    "google-cloud-storage>=2.18.0",
    "onnxruntime>=1.23.2,<1.24; sys_platform == 'linux'",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "pytest-timeout>=2.3.0",
]

# Full-Featured Library Template
# For: Libraries, frameworks, shared packages (oneiric, mcp-common, acb, fastblocks)
# Features: Comprehensive testing, quality tools, type checking fallback

[project]
name = "dhara"
version = "0.8.3"
description = "A Python Persistent Object Database with ACID Transactions"
readme = "README.md"
requires-python = ">=3.13"
license = {text = "MIT"}
authors = [
    {name = "CNRI and others", email = "nas-dhara@arctrix.com"},
]
maintainers = [
    {name = "dhara Development Team", email = "nas-dhara@arctrix.com"},
]
keywords = ["database", "persistence", "object-database", "storage", "nosql"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    # MCP server framework (ecosystem standard)
    "fastmcp>=2.14.0",
    "mcp-common>=0.7.0",
    # Configuration and logging (ecosystem standard)
    "oneiric>=0.5.0",
    # ASGI server for FastMCP
    "uvicorn>=0.30.0",
    # Admin shell with IPython (ecosystem standard)
    "ipython>=8.0.0",
    "rich>=13.0.0",  # For pretty tables and console output
    "cryptography>=43.0.0",
    "msgspec>=0.20.0",
    "schedule>=1.2.0",
    "zstandard>=0.23.0",
]

[project.optional-dependencies]
serialization = [
    "dill>=0.3.9",
]
cloud = [
    "azure-storage-blob>=12.23.0",
    "boto3>=1.35.0",
    "google-cloud-storage>=2.18.0",
]

[project.urls]
Homepage = "https://github.com/lesleslie/dhara"
Documentation = "https://github.com/lesleslie/dhara#readme"
Repository = "https://github.com/lesleslie/dhara"
"Source Code" = "https://github.com/lesleslie/dhara"
"Bug Tracker" = "https://github.com/lesleslie/dhara/issues"

[project.scripts]
dhara = "dhara.cli:main"

[tool.setuptools]

[tool.setuptools.packages.find]
include = ["dhara*", "druva*"]
exclude = ["tests*", "test*"]

[tool.ruff]
target-version = "py313"
line-length = 88
exclude = ["tests/", "test_*.py", "*_test.py"]

[tool.ruff.lint]
extend-select = ["C901", "F", "I", "UP"]
ignore = ["E402", "F821"]
fixable = ["ALL"]

[tool.ruff.lint.mccabe]
max-complexity = 15

[tool.pytest.ini_options]
asyncio_mode = "auto"
timeout = 600
testpaths = ["test", "tests"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "-ra",
    "--tb=short",
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "e2e: End-to-end tests",
    "security: Security-focused tests",
    "performance: Performance and load tests",
    "slow: Slow tests (>2s)",
    "benchmark: Benchmark tests (deferred)",
    "smoke: Quick smoke tests",
    "regression: Regression tests",
    "api: API endpoint tests",
]

[tool.coverage.run]
branch = true
parallel = true  # CRITICAL for pytest-xdist
concurrency = ["multiprocessing"]
source = ["dhara"]
data_file = ".coverage"
omit = [
    "*/test/*",
    "*/__pycache__/*",
    "*/__init__.py",
    "*/_version.py",
    "*/conftest.py",
]

[tool.coverage.report]
exclude_also = [
    "pragma: no cover",
    "def __repr__",
    "def __str__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "@abstractmethod",
    "pass",
    "raise ImportError",
    "except ImportError",
]

[tool.pyright]
include = ["dhara"]
exclude = [
    "test/*",
    "scratch",
    ".venv",
    "build",
    "dist",
]
typeCheckingMode = "strict"
pythonVersion = "3.13"

[tool.bandit]
target = ["dhara"]
skips = ["B101", "B110", "B112", "B404", "B603", "B607"]
exclude_dirs = ["test/"]

[tool.codespell]
quiet-level = 3
ignore-words-list = "crate,uptodate,nd,nin"

[tool.creosote]
paths = ["dhara"]
deps-file = "pyproject.toml"
exclude-deps = [
    "hatchling",
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "pytest-mock",
    "pytest-xdist",
    "pytest-timeout",
    "pytest-benchmark",
    "ruff",
    "pyright",
    "bandit",
    "creosote",
    "codespell",
    "refurb",
    "complexipy",
]

[tool.refurb]
enable_all = false
quiet = true
python_version = "3.13"

[tool.complexipy]
default_pattern = "**/*.py"
exclude_patterns = [
    "**/test/**",
    "**/test_*.py",
]
max_complexity = 15
